[project]
name = "assignment01"
description = "FastAPI application for Assignment #1"
license = { text = "MIT" }
requires-python = ">= 3.10"
dynamic = [ "dependencies" ]
authors = [
  { name = "ashlyn hansen", email = "ashlyn.hansen@utah.edu" }
]

[tool.poetry]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
